--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -236,3 +236,6 @@ Rails/RedundantForeignKey:
 
 Naming/BlockForwarding:
   EnforcedStyle: explicit
+
+Style/RedundantRegexpEscape:
+  Enabled: false
