--- a/package.json
+++ b/package.json
@@ -1,30 +1,27 @@
 {
-  "name": "app",
-  "private": "true",
+  "name": "bottles",
+  "private": "false",
   "scripts": {
-    "build": "esbuild app/javascript/application.tsx --bundle --sourcemap --outdir=app/assets/builds",
-    "build:sources": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
-    "format": "prettier --write 'app/javascript/**/*.{ts,tsx,json}'",
-    "lint": "eslint -c .eslintrc.json app/javascript --ext .ts,.tsx"
+    "build": "esbuild app/javascript/application.jsx --bundle --minify --sourcemap --outdir=app/assets/builds",
+    "format": "prettier --write 'app/javascript/**/*.{js,jsx,json}'",
+    "lint": "eslint -c .eslintrc.json app/javascript --ext .js,.jsx"
   },
   "dependencies": {
-    "esbuild": "^0.14.30",
+    "esbuild": "^0.19.3",
+    "js-cookie": "^3.0.5",
     "react-localization": "^1.0.19"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.8",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.3",
-    "eslint": "^8.12.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@babel/core": "^7.23.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-react": "^7.22.15",
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-config-react-app": "^7.0.0",
-    "prettier": "^2.6.1",
+    "prettier": "^3.0.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-query": "^3.34.19",
-    "tsc-alias": "^1.6.5",
-    "typescript": "^4.6.3"
+    "react-query": "^3.39.3"
   }
 }
